--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,49 +1,40 @@
 @import ".config/mocha.css";
 
 * {
-  font-family: 'Ubutnu Nerd Font';
-  font-size: 17px;
+  font-family: "UbuntuMono Nerd Font";
+  font-size: 20px;
 }
 
-/* Window */
 window {
-  margin: 0px;
-  padding: 10px;
   border: 0.16em solid @lavender;
   border-radius: 0.5em;
   background-color: @mantle;
 }
 
-/* Inner Box */
 #inner-box {
-  margin: 5px;
-  padding: 10px;
+  margin-left: 25px;
   border: none;
   background-color: @mantle;
 }
 
-/* Outer Box */
 #outer-box {
   margin: 5px;
-  padding: 10px;
   border: none;
   background-color: @mantle;
 }
 
-/* Scroll */
 #scroll {
-  margin: 0px;
-  padding: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   border: none;
   background-color: @mantle;
+  align-items: center;
 }
 
-/* Input */
 #input {
   margin-top: 25px;
   margin-left: 25px;
   margin-right: 25px;
-  margin-bottom: 10px;
   padding: 10px;
   border: none;
   border-radius: 0.5em;
@@ -52,15 +43,14 @@ window {
 }
 
 #input image {
-    border: none;
-    color: @red;
+  border: none;
+  color: @red;
 }
 
 #input * {
   outline: 4px solid @red!important;
 }
 
-/* Text */
 #text {
   margin: 5px;
   border: none;
@@ -68,12 +58,8 @@ window {
 }
 
 #entry {
+  margin-right: 25px;
   background-color: @mantle;
-}
-
-#entry arrow {
-  border: none;
-  color: @lavender;
 }
 
 #entry:selected {
@@ -81,7 +67,7 @@ window {
 }
 
 #entry:selected #text {
-  color: @mauve;
+  color: @green;
 }
 
 #entry:drop(active) {
